force-app/main/default/objects/Custom_Exception_Log__e/Custom_Exception_Log__e.object-meta.xml
<CustomObject>
    <description>Used to create Error__c records from an exception context.</description>
    <label>Custom Exception Log</label>
    <pluralLabel>Custom Exception Logs</pluralLabel>
</CustomObject>