force-app/main/default/objects/Custom_Exception_Log__e/fields/Context_Type__c.field-meta.xml
<CustomField>
    <fullName>Context_Type__c</fullName>
    <description>Context that generated the error, if known.</description>
    <label>Context Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>