force-app/main/default/objects/Custom_Exception_Log__e/fields/Datetime__c.field-meta.xml
<CustomField>
    <fullName>Datetime__c</fullName>
    <description>Date &amp; time the error occurred.</description>
    <label>Datetime</label>
    <type>DateTime</type>
</CustomField>