force-app/main/default/objects/Custom_Exception_Log__e/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Type of error that occurred.</description>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>