force-app/main/default/objects/Custom_Exception_Log__e/fields/Full_Message__c.field-meta.xml
<CustomField>
    <fullName>Full_Message__c</fullName>
    <description>Full text of the error message.</description>
    <label>Full Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>