force-app/main/default/objects/Custom_Exception_Log__e/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>The object on which the error occurred, if known.</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>