force-app/main/default/objects/Custom_Exception_Log__e/fields/Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_URL__c</fullName>
    <description>A link to the record which caused the error, if available.</description>
    <label>Record URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>