force-app/main/default/objects/Custom_Exception_Log__e/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <description>Determines the level of impact this Error has on the system.</description>
    <label>Severity Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>